<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"    
    android:orientation="vertical"
    tools:context=".DPushLogin">   

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Nickname" >
        </TextView>
        
        <EditText
                android:id="@+id/username_input"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:hint="@string/prompt_username"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPersonName"
                android:maxLength="14"
                android:maxLines="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Age" >
        </TextView>
                        
        <EditText
                android:id="@+id/userage_input"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:hint="@string/prompt_userage"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPersonName"
                android:maxLength="14"
                android:maxLines="1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="성별" >
        </TextView>                
		<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
		    	android:layout_width="fill_parent"
		    	android:layout_height="wrap_content"
		    	android:orientation="horizontal">
		    <RadioButton android:id="@+id/radio_male"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/male"
		        android:checked="true"
		        android:onClick="onRadioButtonClicked"/>
		    <RadioButton android:id="@+id/radio_female"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/female"
		        android:onClick="onRadioButtonClicked"/>
		</RadioGroup>                        
        <Button
                android:id="@+id/sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColor="#ffffff"
                android:text="@string/action_sign_in"
                android:textStyle="bold"/>

    </LinearLayout>
</ScrollView>
